data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_34.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8c\80\80\80\00\01\03\65\6e\76\04\74\72"
    "\61\70\00\00\03\82\80\80\80\00\01\00\07\88\80\80"
    "\80\00\01\04\74\65\73\74\00\01\0a\8f\80\80\80\00"
    "\01\89\80\80\80\00\00\41\00\04\40\10\00\0b\0b"
  )
""
)